Introduced game context; implemented game status view, vibration on error, etc.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
     >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="Hello World, CustomViewActivity"
-    />
+    <TextView android:id="@+id/status"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start_message"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        />
+    <org.bitbucket.alt.circles.CirclesView
+        android:id="@+id/circles"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"/>
+
 </LinearLayout>
 
